# EXPy

./: .gitignore  .gitmodules  AppHandshakeProcessor.py  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  DINProcessor.py  EXIProcessor.py  Makefile  NOTICE.txt  README.md  example.py  pyproject.toml
.agents/skills/grill-with-docs/: SKILL.md
.agents/skills/tdd/: SKILL.md
V2Gjson/: __init__.py  apphand.py  common.py  din.py  iso2.py  iso20_ac.py  iso20_acdp.py  iso20_common.py  iso20_dc.py  iso20_wpt.py  sap.py
docs/adr/: 0001-codegen-from-libcbv2g-headers.md  0002-namespace-granular-processor-split.md  0003-public-api-surface.md  0004-canonicalize-sap-namespace.md  0005-schema-driven-fixture-generation.md  0006-encode-decode-error-contract.md  0007-libcbv2g-pgpdata-union-patch.md  0008-libcbv2g-pgpdata-seq2-grammar-patch.md  0009-libcbv2g-iso20-wpt-loop-grammar-patch.md  0010-libcbv2g-iso20-pgpdata-grammar-patch.md  0011-codegen-processor-cpp-hpp.md  0012-public-api-surface-cli.md  0013-v1.0-packaging.md  0014-v1.0-public-surface-refinements.md
docs/agents/: domain.md  issue-tracker.md
expy/: __init__.py  _cli.py  processor.py
expy/v2gjson/: __init__.py  common.py  iso2.py  iso20_common.py  iso20_dc.py  iso20_wpt.py
include/: AppHandshakeProcessor.hpp  DINProcessor.hpp  ISO2Processor.hpp  SupportedAppProtocolProcessor.hpp  common.hpp  expy_cli_helpers.hpp
patches/libcbv2g/: 0001-iso2-pgpdata.patch  0002-iso2-pgpdata-seq2.patch  0003-iso20-wpt-loop-grammar.patch  0004-iso20-pgpdata.patch  0005-iso20-pgpdata-grammar.patch
src/: AppHandshakeProcessor.cpp  DINProcessor.cpp  ISO20ACDPProcessor.cpp  ISO20ACDPProcessor.hpp  ISO20ACProcessor.cpp  ISO20ACProcessor.hpp  ISO20CommonProcessor.cpp  ISO20CommonProcessor.hpp  ISO20DCProcessor.cpp  ISO20DCProcessor.hpp  ISO20WPTProcessor.cpp  ISO20WPTProcessor.hpp  ISO2Processor.cpp  SupportedAppProtocolProcessor.cpp  common.cpp
test/: runTests.sh  testApp.py  testDIN.py
test/AppHandshake/: supportedAppProtocolReq.json  supportedAppProtocolRes.json
test/DIN/: CableCheckReq.json  CableCheckRes.json  ChargeParameterDiscoveryReq.json  ContractAuthenticationReq.json  ContractAuthenticationRes.json  CurrentDemandRes.json  PowerDeliveryReq.json  PowerDeliveryRes.json  ServiceDiscoveryReq.json  ServiceDiscoveryRes.json  ServicePaymentSelectionReq.json  ServicePaymentSelectionRes.json  SessionSetupReq.json  SessionStopReq.json  SessionStopRes.json
tests/codegen/: conftest.py  test_bytes_array.py  test_chars_array.py  test_cli.py  test_emit_get_doc.py  test_emit_get_json.py  test_emit_get_json_characters.py  test_emit_get_json_other_kinds.py  test_exi_signed_t.py  test_fixture_emitter.py  test_parser.py  test_parser_field_kinds.py  test_processor_emitter.py  test_scalar_array.py  test_union_choice.py  test_v2gjson_emitter.py
tests/integration/: conftest.py  test_app_handshake_roundtrip.py  test_cli_binaries.py  test_cli_fragment_modes.py  test_decode_errors.py  test_din_generated_roundtrip.py  test_din_roundtrip.py  test_encode_errors.py  test_iso20_ac_generated_fragment_roundtrip.py  test_iso20_ac_generated_roundtrip.py  test_iso20_ac_generated_xmldsig_roundtrip.py  test_iso20_ac_tracer.py  test_iso20_acdp_generated_roundtrip.py  test_iso20_acdp_tracer.py  test_iso20_common_generated_fragment_roundtrip.py  test_iso20_common_generated_roundtrip.py  test_iso20_common_generated_xmldsig_roundtrip.py  test_iso20_common_tracer.py  test_iso20_dc_generated_fragment_roundtrip.py  test_iso20_dc_generated_roundtrip.py  test_iso20_dc_generated_xmldsig_roundtrip.py  test_iso20_dc_tracer.py  test_iso20_wpt_generated_roundtrip.py  test_iso20_wpt_tracer.py  test_iso2_generated_fragment_roundtrip.py  test_iso2_generated_roundtrip.py  test_iso2_generated_xmldsig_roundtrip.py  test_iso2_roundtrip.py  test_namespace_dispatch.py  test_namespace_parity.py  test_negative_inputs.py  test_packaging.py  test_pip_install.py  test_sap_roundtrip.py  test_unsupported_methods.py  test_v2gjson_roundtrip.py  test_v2gjson_smoke.py  test_version.py
tests/integration/fixtures/DIN/: ChargeParameterDiscoveryRes.json  ContractAuthenticationReq.json  CurrentDemandReq.json  DIN_Header.json  PreChargeReq.json  PreChargeRes.json  SessionSetupRes.json  SessionStopReq.json
tests/integration/fixtures/ISO2/: Fragment_AuthorizationReq.json  ISO2_Header.json  PowerDeliveryReq.json  SessionSetupReq.json  Xmldsig_SignedInfo.json
tests/integration/fixtures/ISO20_COMMON/: SignedInfo.json
tests/integration/fixtures/SAP/: supportedAppProtocolReq.json
tools/: expy_cli.cpp
tools/codegen/: __main__.py  din_choices.py  emitter.py  fixture_emitter.py  iso20_ac_choices.py  iso20_acdp_choices.py  iso20_common_choices.py  iso20_dc_choices.py  iso20_wpt_choices.py  iso2_choices.py  parser.py  processor_cli_emitter.py  processor_emitter.py  v2gjson_emitter.py
